sumo/tests/sumo/errors/meandata/meandata_edges_missing_begin_divider/errors.sumo
Error: While processing option 'dump-begins':
 Empty element occured in 0,
Error: Could not parse commandline options.
Quitting (on error).
